--- a/app/src/main/res/layout/item_note_entry.xml
+++ b/app/src/main/res/layout/item_note_entry.xml
@@ -36,7 +36,8 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             app:layout_constraintTop_toBottomOf="@id/date"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/note"
+            app:layout_goneMarginBottom="12dp"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -49,13 +50,16 @@
             android:id="@+id/note"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_goneMarginTop="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="12dp"
-            app:layout_constraintEnd_toEndOf="@id/title"
-            android:text="Keep smiling every day"
+            android:text="Keep smiling..."
             android:maxLines="3"
             android:ellipsize="end"
             />
