minot UX change in note editing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/ic_add"
         android:background="@color/colorPrimary"
-        />
+        android:contentDescription="add note" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
