--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -49,8 +49,8 @@
         android:imeOptions="actionNext"
         />
 
-    <EditText
-        android:id="@+id/noteDetails"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/noteTitle"
@@ -58,15 +58,20 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="24dp"
         android:layout_marginStart="22dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/note_background"
-        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
-        android:imeOptions="actionNone"
-        android:hint="@string/noteDetails"
-        android:gravity="top"
-        android:paddingTop="12dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        />
+        android:layout_marginEnd="24dp">
+
+        <EditText
+            android:id="@+id/noteDetails"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@drawable/note_background"
+            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
+            android:imeOptions="actionNone"
+            android:hint="@string/noteDetails"
+            android:gravity="top"
+            android:paddingTop="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
