--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -1,91 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <data>
-        <variable
-            name="note"
-            type="Note" />
-        <import type="com.timepasslabs.positivenote.data.Note"/>
-        <import type="com.timepasslabs.positivenote.data.DateUtil"/>
-    </data>
+    <TextView
+        android:id="@+id/dateDesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:textSize="18sp"
+        android:layout_marginStart="26dp"
+        android:text="@string/date_label"
+        android:textStyle="italic"
+        />
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <com.skydoves.powerspinner.PowerSpinnerView
+        android:id="@+id/dateSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/dateDesc"
+        app:layout_constraintTop_toTopOf="@id/dateDesc"
+        app:layout_constraintBottom_toBottomOf="@id/dateDesc"
+        android:text="@string/today"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:gravity="start"
+        android:paddingStart="12dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        />
+
+    <EditText
+        android:id="@+id/noteTitle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:hint="@string/noteTitle"
+        app:layout_constraintTop_toBottomOf="@id/dateSpinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:imeOptions="actionNext"
+        />
 
-        <TextView
-            android:id="@+id/dateDesc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="32dp"
-            android:textSize="18sp"
-            android:layout_marginStart="26dp"
-            android:text="@string/date_label"
-            android:textStyle="italic"
-            />
-
-        <com.skydoves.powerspinner.PowerSpinnerView
-            android:id="@+id/dateSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/dateDesc"
-            app:layout_constraintTop_toTopOf="@id/dateDesc"
-            app:layout_constraintBottom_toBottomOf="@id/dateDesc"
-            android:text="@{DateUtil.INSTANCE.getDateForSpinner(note.date)"
-            android:textSize="18sp"
-            android:textStyle="italic"
-            android:gravity="start"
-            android:paddingStart="12dp"
-            android:paddingTop="6dp"
-            android:paddingBottom="6dp"
-            />
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/noteTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="24dp">
 
         <EditText
-            android:id="@+id/noteTitle"
+            android:id="@+id/noteDetails"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/noteTitle"
-            app:layout_constraintTop_toBottomOf="@id/dateSpinner"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
-            android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:imeOptions="actionNext"
-            android:text="@{note.title}"
+            android:layout_height="200dp"
+            android:background="@drawable/note_background"
+            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
+            android:imeOptions="actionNone"
+            android:hint="@string/noteDetails"
+            android:gravity="top"
+            android:paddingTop="12dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             />
+    </ScrollView>
 
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/noteTitle"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="24dp"
-            android:layout_marginStart="22dp"
-            android:layout_marginEnd="24dp">
-
-            <EditText
-                android:id="@+id/noteDetails"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@drawable/note_background"
-                android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
-                android:imeOptions="actionNone"
-                android:hint="@string/noteDetails"
-                android:gravity="top"
-                android:paddingTop="12dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:text="@{note.details}"
-                />
-        </ScrollView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
