--- a/app/src/main/res/layout/fragment_read_only.xml
+++ b/app/src/main/res/layout/fragment_read_only.xml
@@ -2,7 +2,7 @@
 <layout>
     <data>
         <import type="com.timepasslabs.positivenote.data.Note"/>
-        <import type="com.timepasslabs.positivenote.data.DateUtil"/>
+        <import type="com.timepasslabs.positivenote.DateUtil"/>
         <import type="android.view.View"/>
 
         <variable
@@ -10,7 +10,7 @@
             type="Note" />
         <variable
             name="dateUtil"
-            type="DateUtil" />
+            type="com.timepasslabs.positivenote.DateUtil" />
     </data>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,7 +33,7 @@
                 android:layout_margin="12dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:text="@{dateUtil.getDateForSpinner(note.date)"
+                android:text="@{dateUtil.getDateForSpinner(note.date)}"
                 android:textStyle="italic"
                 />
 
@@ -68,7 +68,7 @@
                 android:paddingTop="12dp"
                 android:textSize="18sp"
                 android:text="@{note.details}"
-                android:visibility="@{note.title.empty? View.GONE : View.VISIBLE"
+                android:visibility="@{note.title.empty? View.GONE : View.VISIBLE}"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
