--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -56,6 +56,7 @@
         app:layout_constraintTop_toBottomOf="@id/noteTitle"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="8dp"
+        android:fillViewport="true"
         android:layout_marginBottom="24dp"
         android:layout_marginStart="22dp"
         android:layout_marginEnd="24dp">
@@ -63,12 +64,13 @@
         <EditText
             android:id="@+id/noteDetails"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/note_background"
             android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
             android:imeOptions="actionNone"
             android:hint="@string/noteDetails"
             android:gravity="top"
+            android:overScrollMode="always"
             android:paddingTop="12dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
