rename date to timestamp and convert it to long in note table

--- a/app/src/main/res/layout/fragment_read_only.xml
+++ b/app/src/main/res/layout/fragment_read_only.xml
@@ -33,7 +33,7 @@
                 android:layout_margin="12dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:text="@{dateUtil.getDateForSpinner(note.date)}"
+                android:text="@{dateUtil.getDateForSpinner(note.timestamp)}"
                 android:textStyle="italic"
                 />
 
